<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/star"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/fragmentOne"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:width="0dp"
        app:layout_constraintEnd_toStartOf="@id/fragmentTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tpfl" />


    <Button
        android:id="@+id/fragmentTwo"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:width="0dp"
        android:text="@string/to"
        app:layout_constraintEnd_toStartOf="@id/fragmentOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragmentThree"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:width="0dp"
        android:text="@string/pplg"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="@id/fragmentFour"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragmentFour"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:width="0dp"
        app:layout_constraintEnd_toStartOf="@id/fragmentThree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/busana" />

    <Button
        android:id="@+id/fragmentFive"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:width="0dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/kuliner" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>